[gd_scene load_steps=7 format=3 uid="uid://c4srwnr6xsx1c"]

[ext_resource type="Script" uid="uid://duq3r4qo65pw3" path="res://Scripts/UI/InventorySlot.gd" id="1_ihjcb"]
[ext_resource type="PackedScene" uid="uid://6rvluknqcohs" path="res://Scenes/outline.tscn" id="2_xlqxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0jqs"]
bg_color = Color(0.203922, 0, 0.72549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0196078, 0, 0.286275, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ViewportTexture" id="ViewportTexture_n1cuv"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r20yg"]
bg_color = Color(0.0196078, 0, 0.286275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qldw"]
bg_color = Color(0.0313726, 0, 0.282353, 0.784314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 165.0
offset_bottom = 165.0
script = ExtResource("1_ihjcb")

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m0jqs")
icon = SubResource("ViewportTexture_n1cuv")
text_overrun_behavior = 1

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
size = Vector2i(140, 140)

[node name="Outline" parent="SubViewport" instance=ExtResource("2_xlqxs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
skeleton = NodePath("")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(0.819152, -0.573576, 0, 0.573576, 0.819152, 0, 0, 0, 1, 3, 1, 0)

[node name="DirectionalLight3D5" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-0.819152, 0.573576, -8.74228e-08, 0.573576, 0.819152, 0, 7.16125e-08, -5.01436e-08, -1, -3, 1, 0)

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-3.58063e-08, 2.50718e-08, -1, 0.573576, 0.819152, 0, 0.819152, -0.573576, -4.37114e-08, 0, 1, 3)

[node name="DirectionalLight3D4" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-3.58063e-08, 2.50718e-08, 1, 0.573576, 0.819152, 0, -0.819152, 0.573576, -4.37114e-08, 0, 1, -3)

[node name="SlotTypeLabel" type="Label" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 155.0
offset_right = 455.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r20yg")

[node name="MarginContainer" type="MarginContainer" parent="DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemInfo" type="RichTextLabel" parent="DetailsPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Item name
Item type
Item description
Value: 0
+0 Stat
Effect Description
"
fit_content = true
scroll_active = false

[node name="UsagePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6qldw")

[node name="MarginContainer" type="MarginContainer" parent="UsagePanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel/MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[connection signal="focus_entered" from="ItemButton" to="." method="_on_item_button_focus_entered"]
[connection signal="focus_exited" from="ItemButton" to="." method="_on_item_button_focus_exited"]
